--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,82 +1,101 @@
 version: '3.8'
 
 services:
-  postgres:
-    image: docker.arvancloud.ir/postgres:15-alpine
-    container_name: sms_postgres
-    environment:
-      POSTGRES_DB: sms_gateway
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres123
+  # 1. Database Service
+  db:
+    image: postgres:15-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5433:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    restart: unless-stopped
-
-  redis:
-    image: docker.arvancloud.ir/redis:7-alpine
-    container_name: sms_redis
-    ports:
-      - "6380:6379"
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    restart: unless-stopped
-
-  rabbitmq:
-    image: docker.arvancloud.ir/rabbitmq:3-management-alpine
-    container_name: sms_rabbitmq
     environment:
-      RABBITMQ_DEFAULT_USER: admin
-      RABBITMQ_DEFAULT_PASS: admin123
-    ports:
-      - "5673:5672"
-      - "15673:15672"
-    healthcheck:
-      test: ["CMD", "rabbitmq-diagnostics", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    restart: unless-stopped
+      - POSTGRES_DB=sms_gateway_db
+      - POSTGRES_USER=sms_user
+      - POSTGRES_PASSWORD=sms_password
+    networks:
+      - sms_net
 
-  api:
+  # 2. Redis Service
+  redis:
+    image: redis:7-alpine
+    volumes:
+      - redis_data:/data
+    networks:
+      - sms_net
+
+  # 3. Django Web Service (Gunicorn)
+  web:
     build: .
-    container_name: sms_api
+    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 4 --threads 4
     volumes:
       - .:/app
-    ports:
-      - "8000:8000"
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
+      - ./logs:/app/logs
     environment:
-      - DEBUG=True
-      - SECRET_KEY=django-insecure-change-this-in-production-xyz123
-      - ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
-      - DB_NAME=sms_gateway
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres123
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - CELERY_BROKER_URL=amqp://admin:admin123@rabbitmq:5672//
-      - SMS_COST_PER_MESSAGE=0.10
-      - EXPRESS_MULTIPLIER=2.0
-      - DEFAULT_RATE_LIMIT_PER_MINUTE=100
+      - RUN_MIGRATIONS=true
+    env_file:
+      - .env
     depends_on:
-      postgres:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      rabbitmq:
-        condition: service_healthy
-    restart: unless-stopped
+      - db
+      - redis
+    networks:
+      - sms_net
+
+  # 4. Celery Worker (Processing Tasks)
+  celery_worker:
+    build: .
+    command: celery -A config worker -l info -Q normal_sms,express_sms
+    volumes:
+      - .:/app
+      - ./logs:/app/logs
+    env_file:
+      - .env
+    environment:
+      - RUN_MIGRATIONS=false
+    depends_on:
+      - db
+      - redis
+    networks:
+      - sms_net
+
+  # 5. Celery Beat (Scheduled Tasks)
+  celery_beat:
+    build: .
+    command: celery -A config beat -l info
+    volumes:
+      - .:/app
+      - ./logs:/app/logs
+    environment:
+      - RUN_MIGRATIONS=false
+    env_file:
+      - .env
+    depends_on:
+      - db
+      - redis
+    networks:
+      - sms_net
+
+  # 6. Nginx Service (Reverse Proxy & Static Files)
+  nginx:
+    image: nginx:1.25-alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      - static_volume:/app/staticfiles:ro
+      - media_volume:/app/media:ro
+      - ./logs:/var/log/nginx
+    depends_on:
+      - web
+    networks:
+      - sms_net
 
 volumes:
   postgres_data:
+  redis_data:
+  static_volume:
+  media_volume:
+
+networks:
+  sms_net:
+    driver: bridge
