improving system logic and deployment issues

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   # 1. Database Service
   db:
     image: postgres:15-alpine
+    command: postgres -c 'max_connections=1000'
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
@@ -24,7 +25,7 @@ services:
   # 3. Django Web Service (Gunicorn)
   web:
     build: .
-    command: gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 4 --threads 4
+    command: uvicorn config.asgi:application --host 0.0.0.0 --port 8000 --workers 4 --loop uvloop
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
