--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,7 +16,7 @@ http {
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log /var/log/nginx/access.log main;
+    access_log /var/log/nginx/access.log main buffer=32k flush=5s;
 
     sendfile on;
     tcp_nopush on;
@@ -36,8 +36,8 @@ http {
                application/vnd.ms-fontobject image/svg+xml;
 
     # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=5000r/s;
-    limit_req_status 429;
+    # limit_req_zone $binary_remote_addr zone=api_limit:10m rate=5000r/s;
+    # limit_req_status 429;
 
     # Include server configs
     include /etc/nginx/conf.d/*.conf;
