--- a/nginx/conf.d/sms_gateway.conf
+++ b/nginx/conf.d/sms_gateway.conf
@@ -30,6 +30,7 @@ server {
 
     # Health check (no rate limit)
     location /health/ {
+        access_log off;
         proxy_pass http://django;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -39,7 +40,7 @@ server {
 
     # API endpoints (with rate limiting)
     location /api/ {
-        limit_req zone=api_limit burst=20 nodelay;
+        # limit_req zone=api_limit burst=20 nodelay;
 
         proxy_pass http://django;
         proxy_set_header Host $host;
@@ -48,9 +49,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
 
         # Timeouts
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        proxy_connect_timeout 120s;
+        proxy_send_timeout 120s;
+        proxy_read_timeout 120s;
     }
 
     # Admin panel
