--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ django-prometheus==2.4.1
 django-ratelimit==4.1.0
 django-redis==5.4.0
 djangorestframework==3.14.0
-drf-spectacular==0.27.0
 exceptiongroup==1.3.1
 fakeredis==2.33.0
 Flask==3.1.2
@@ -83,3 +82,5 @@ Werkzeug==3.1.4
 wsproto==1.3.2
 zope.event==6.1
 zope.interface==8.1.1
+uvicorn[standard]==0.27.0
+drf-spectacular==0.27.2
